--- a/src/features/modules/menu/styled-link/styled-link.module.scss
+++ b/src/features/modules/menu/styled-link/styled-link.module.scss
@@ -1,5 +1,5 @@
-@use 'src/styles/fonts.scss';
-@use 'src/styles/colors.scss';
+@use '../../../../styles/fonts';
+@use '../../../../styles/colors';
 
 .styledLink {
   padding: 2px;
