--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,17 +1,19 @@
-$purple700: #4F1650;
-$purple600: #8B268D;
-$purple500: #D157D3;
-$purple400: #DD86DF;
-$purple300: #EDC0EE;
-$purple200: #F4D6F5;
-$purple100: #F9EBFA;
+$purple700: #4f1650;
+$purple600: #8b268d;
+$purple500: #d157d3;
+$purple400: #dd86df;
+$purple300: #edc0ee;
+$purple200: #f4d6f5;
+$purple100: #f9ebfa;
 
-$gray900: #1F1B20;
-$gray800: #342E34;
-$gray700: #6D626D;
-$gray600: #8E848E;
-$gray500: #B8B3B8;
-$gray400: #D3D1D3;
-$gray300: #E8E7E8;
-$gray200: #F5F4F5;
-$gray100: #FCFBFC;
+$gray900: #1f1b20;
+$gray800: #342e34;
+$gray700: #6d626d;
+$gray600: #8e848e;
+$gray500: #b8b3b8;
+$gray400: #d3d1d3;
+$gray300: #e8e7e8;
+$gray200: #f5f4f5;
+$gray100: #fcfbfc;
+
+$green600: #008000;
