--- a/src/features/components/text/text.module.scss
+++ b/src/features/components/text/text.module.scss
@@ -30,6 +30,13 @@
   font-family: fonts.$gilroyBold;
   font-weight: 400;
   font-size: 18px;
-  letter-spacing: 0.4px;
   margin: 0;
+}
+
+.button-text {
+  font-family: fonts.$gilroyBold;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.4px;
 }
