--- a/src/features/modules/call-agent-modal/call-agent-modal.module.scss
+++ b/src/features/modules/call-agent-modal/call-agent-modal.module.scss
@@ -7,6 +7,8 @@
   min-width: 360px;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  gap: 48px;
 }
 
 .titleWrapper {
@@ -17,4 +19,13 @@
   width: 48px;
   height: 48px;
   background-color: colors.$green600;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  margin-top: 16px;
+  border: none;
+}
+
+.callIcon {
+  color: colors.$gray100;
 }
