--- a/src/features/modules/call-agent-modal/call-agent-modal.module.scss
+++ b/src/features/modules/call-agent-modal/call-agent-modal.module.scss
@@ -24,6 +24,14 @@
   border-radius: 50%;
   margin-top: 16px;
   border: none;
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  &.callActive {
+    background-color: red;
+  }
 }
 
 .callIcon {
