--- a/src/features/components/audio-visualizer/audio-visualizer.module.scss
+++ b/src/features/components/audio-visualizer/audio-visualizer.module.scss
@@ -17,3 +17,47 @@
   min-width: auto;
   border-radius: 50%;
 }
+
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
+  height: 75px;
+}
+
+.loader div {
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;
+  background-color: #ffd700;
+  animation: wave 2s infinite ease-in-out;
+}
+
+@keyframes wave {
+  25% {
+    height: 75px;
+    background-color: #fc00ff;
+  }
+
+  50% {
+    height: 15px;
+    background-color: #9c73f8;
+  }
+}
+
+.loader :nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.loader :nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+.loader :nth-child(4) {
+  animation-delay: 0.6s;
+}
+
+.loader :nth-child(5) {
+  animation-delay: 0.8s;
+}
